--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
             </form>
           </section>
 
-          <section class="catalog-goods">
+          <section class="catalog-items">
             
             <div class="sort">
               <h2>Сортировка:</h2>
@@ -150,151 +150,127 @@
               </ul>
             </div>
 
-            <ul class="catalog-list">
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+            <div class="column">              
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 3000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">22500 ₽.</a>
-                <a class="new-price" href="#">15500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 3000</div>
+                <div class="old-price">22500 ₽.</div>
+                <div class="new-price">15500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 6000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">30500 ₽.</a>
-                <a class="new-price" href="#">25500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog new">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 6000</div>
+                <div class="old-price">30500 ₽.</div>
+                <div class="new-price">25500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 2000
-                  </a>
-                </h3>
-                <a class="new-price" href="#">12500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 2000</div>
+                <div class="old-price hidden">22500 ₽.</div>
+                <div class="new-price">12500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 3000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">22500 ₽.</a>
-                <a class="new-price" href="#">15500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog new">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 3000</div>
+                <div class="old-price">22500 ₽.</div>
+                <div class="new-price">15500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 6000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">30500 ₽.</a>
-                <a class="new-price" href="#">25500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 6000</div>
+                <div class="old-price">30500 ₽.</div>
+                <div class="new-price">25500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 2000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">30500 ₽.</a>
-                <a class="new-price" href="#">12500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog new">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 2000</div>
+                <div class="old-price">30500 ₽.</div>
+                <div class="new-price">12500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 3000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">22500 ₽.</a>
-                <a class="new-price" href="#">15500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 3000</div>
+                <div class="old-price">22500 ₽.</div>
+                <div class="new-price">15500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 6000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">30500 ₽.</a>
-                <a class="new-price" href="#">25500 ₽.</a>
-              </li>
-              <li class="catalog-item-catalog">
-                <div class="buy-bookmark visually-hidden">
-                  <a class="button" href="#">Купить</a>
-                  <a class="button" href="#">В Закладки</a>
+                <div class="title">Перфоратор BOSCH BFG 6000</div>
+                <div class="old-price">30500 ₽.</div>
+                <div class="new-price">25500 ₽.</div>
+              </div>
+
+              <div class="catalog-item">
+                <div class="actions">
+                  <a class="buy" href="#">Купить</a>
+                  <a class="bookmark" href="#">В закладки</a>
                 </div>
-                <figure class="catalog-item-image">
-                  <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+                <figure class="image">
+                  <img class="catalog-item-image" src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
                 </figure>
-                <h3>
-                  <a class="catalog-category" href="#">
-                    Перфоратор BOSCH BFG 2000
-                  </a>
-                </h3>
-                <a class="old-price" href="#">30500 ₽.</a>
-                <a class="new-price" href="#">12500 ₽.</a>
-              </li>
-            </ul>
+                <div class="title">Перфоратор BOSCH BFG 2000</div>
+                <div class="old-price">30500 ₽.</div>
+                <div class="new-price">12500 ₽.</div>
+              </div>
+              
+            </div>
+
 
             <ul class="pagination-list">
               <li class="pagination-item pagination-item-current"><a>1</a></li>
@@ -302,6 +278,7 @@
               <li class="pagination-item"><a href="#">3</a></li>
               <li class="pagination-item pagination-next"><a href="#">Следующая</a></li>
             </ul>
+
           </section>
 
         </div>
