--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
 
           <section class="container-filters">            
             <form class="filter" method="get" action="#">
-              <h2>Фильтр:</h2>
+              <h2 class="filter-h2">Фильтр:</h2>
 
               <fieldset class="filter-item">
                 <legend>Цена:</legend>
@@ -158,11 +158,11 @@
             <div class="sort">
               <h2>Сортировка:</h2>
               <ul class="sort-list">
-                <li><a class="sort-list-item" href="#">по цене</a></li>
-                <li><a class="sort-list-item" href="#">по типу</a></li>
-                <li><a class="sort-list-item" href="#">по функционалу</a></li>
-                <li><a class="sort-list-item" href="#">вверх</a></li>
-                <li><a class="sort-list-item" href="#">вниз</a></li>
+                <li><a class="by-price" href="#">по цене</a></li>
+                <li><a class="type" href="#">по типу</a></li>
+                <li><a class="by-functionality" href="#">по функционалу</a></li>
+                <li><a class="up" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#ee3643" d="M5.5 0L0 10h11z"/></svg></a></li>
+                <li><a class="down" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#c5c5c5" d="M5.5 10L0 0h11"/></svg></a></li>
               </ul>
             </div>
 
@@ -299,16 +299,18 @@
 
           </section>
 
-        </div>
+        </div>        
 
-        <section class="container description">
+      </div>
+
+      <div class="description">
+        <div class="container">
           <h2>Пара слов о перфораторах</h2>
           <p>
             Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
             Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
-        </section>
-
+        </div>
       </div>
 
     </main>
