--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>    
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-
   <body>
     <header class="main-header">
       <div class="container">
@@ -24,13 +22,13 @@
       </div>
       <div class="container">
         <div class="header-middle">
-          <h1 class="heading">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+          <h1 class="heading">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
           <div class="header-contacts">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="user-login">
-            <li><a class="enter" href="#">Вход</a></li>
+            <li><a class="enter" href="#">Войти</a></li>
             <li><a href="#">Регистрация</a></li>
           </ul>
         </div>
@@ -114,7 +112,6 @@
       <div class="goods-and-manufacturers">
         <div class="container">
           <div class="goods">
-
             <div class="header-block-main">
               <h2>Популярные товары:</h2>
               <a href="#">Все популярные товары</a>
@@ -122,8 +119,7 @@
 
 
             <div class="catalog-items">
-              <div class="row">
-                  
+              <div class="row">                  
                 <div class="catalog-item">
                   <div class="actions">
                     <a class="buy" href="#">Купить</a>
@@ -176,13 +172,11 @@
                   <div class="old-price">12500 ₽.</div>
                   <div class="new-price">12500 ₽.</div>
                 </div>
-
               </div>
             </div>
           </div>
 
           <section class="brands">
-
             <div class="header-block-main">
               <h2>Популярные производители:</h2>
               <a href="#">Все производители</a>
@@ -285,11 +279,6 @@
         </div>
       </div>
 
-
-
-
-
-
       <div class="container">
         <section class="company-and-contacts">
           <div class="about-us">
@@ -317,7 +306,6 @@
       </div>
     </main>
 
-    <!-- ФУТ0Р -->
     <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
@@ -400,7 +388,6 @@
       <span class="modal-close">Закрыть</span>
     </section>
 
-    <!-- map -->
     <section class="modal modal-map map visually-hidden">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="940" height="446" allowfullscreen></iframe>
       <button class="modal-close" type="button">Закрыть</button>
