--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body>    
     <header class="main-header">
       <div class="container">
         <div class="header-top">
@@ -30,6 +30,7 @@
           <div class="menu">
             <ul class="user-menu-exit">
               <li><a class="catalog-user-name" href="#">Равшан Джамшутович</a></li>
+              <li><a href="#"></a></li>
             </ul>
             <ul class="user-menu">
               <li><a href="#">Мои заказы</a></li>
@@ -68,7 +69,7 @@
           <a>Перфораторы</a>
         </li>
       </ul>
-    </div>    
+    </div>
 
     <main>
       <div class="container">
@@ -346,7 +347,6 @@
         <a class="modal-cart-button" href="#" tabindex="0">Продолжить покупки</a>
       </div>
       <button class="modal-close" type="button">Закрыть</button>
-    </section>
-    <div class="overlay"></div>
+    </section>    
   </body>
 </html>
