2 линка в блоке юзер-меню

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
           <div class="menu">
             <ul class="user-menu-exit">
               <li><a class="catalog-user-name" href="#">Равшан Джамшутович</a></li>
-              <li><a href="#"></a></li>
+              <li><a class="catalog-user-logout" href="#"></a></li>
             </ul>
             <ul class="user-menu">
               <li><a href="#">Мои заказы</a></li>
