--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,8 @@
       </div>
       <div class="container">
         <div class="header-middle">
-          <h1 class="heading">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-          <div class="header-contacts">
+          <h1 class="heading-catalog">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+          <div class="header-contacts catalog">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
@@ -101,7 +101,7 @@
                 </div>
               </fieldset>
 
-              <fieldset class="filter-item">
+              <fieldset class="filter-brand">
                 <legend>Производители:</legend>
                 <ul>
                   <li class="filter-option">
@@ -127,7 +127,7 @@
                 </ul>
               </fieldset>
 
-              <fieldset class="filter-item">
+              <fieldset class="filter-power">
                 <legend>Питание:</legend>
                 <ul>
                   <li class="filter-option">
@@ -144,7 +144,7 @@
             </form>
           </section>
 
-          <section class="catalog-items">            
+          <section class="catalog-items">      
             <div class="sort">
               <h2>Сортировка:</h2>
               <ul class="sort-list">
