--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <div class="container">
         <div class="header-middle">
-          <h1 class="heading">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
-          <div class="header-contacts">
+          <h1 class="heading-index">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+          <div class="header-contacts index">
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
