--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
             <button class="visually-hidden" type="submit">Найти</button>
           </form>
           <a class="book-cart" href="#">Закладки: 0</a>
-          <a class="book-cart cart" href="#">Корзина: 10</a>
+          <a class="book-cart cart active-cart" href="#">Корзина: 10</a>
           <a class="checkout" href="#">Оформить заказ</a>
         </div>
       </div>
