.catalog-item-active

--- a/catalog.html
+++ b/catalog.html
@@ -182,7 +182,7 @@
                 <div class="old-price">30500 ₽.</div>
                 <div class="new-price">25500 ₽.</div>
               </div>
-              <div class="catalog-item">
+              <div class="catalog-item catalog-item-active">
                 <div class="flag flag-new">Новинка</div>
                 <div class="actions">
                   <a class="buy" href="#">Купить</a>
