--- a/catalog.html
+++ b/catalog.html
@@ -6,52 +6,47 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>    
-    <header class="main-header">      
-        <div class="ilove-divatoz">
-          <div class="container">
-            <div class="header-top">
-            <a class="header-logo" href="index.html">Техномарт</a>
+  <body>
+    <header class="main-header">
+      <div class="ilove-divatoz">
+        <div class="container">
+          <div class="header-top">
+            <a class="header-logo">Техномарт</a>
             <form class="search">
-                <input class="input" type="text" placeholder="Поиск:">
-                <button class="visually-hidden" type="submit">Найти</button>
+              <input class="input" type="text" placeholder="Поиск:">
+              <button class="visually-hidden" type="submit">Найти</button>
             </form>
             <a class="book-cart" href="#">Закладки: 0</a>
-            <a class="book-cart cart active-cart" href="#">Корзина: 10</a>
+            <a class="book-cart cart" href="#">Корзина: 0</a>
             <a class="checkout" href="#">Оформить заказ</a>
-            </div>
           </div>
-        </div>      
-        <div class="container">
-          <div class="header-middle">
-            <h1 class="heading-catalog">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
-            <div class="header-contacts catalog">
-              <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-              <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            </div>
-            <div class="menu">
-              <ul class="user-menu-exit">
-                <li><a class="catalog-user-name" href="#">Равшан Джамшутович</a></li>
-                <li><a class="catalog-user-logout" href="#"></a></li>
-              </ul>
-              <ul class="user-menu">
-                <li><a href="#">Мои заказы</a></li>
-                <li><a href="#">Личный кабинет</a></li>
-              </ul>
-            </div>
-          </div>        
-          <nav class="main-navigation">
-            <ul class="header-top-navigation">
-              <li><a href="index.html">Главная</a></li>
-              <li><a href="about-us.html">Компания</a></li>
-              <li><a>Каталог</a></li>
-              <li><a href="news.html">Новости</a></li>
-              <li><a href="special-offers.html">Спецпредложения</a></li>
-              <li><a href="delivery.html">Доставка</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
-            </ul>
-          </nav>
         </div>
+      </div>
+      <div class="container">
+        <div class="header-middle">
+          <h1 class="heading-index">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
+          <div class="header-contacts index">
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <ul class="user-login">
+            <li><a class="enter" href="#">Войти</a></li>
+            <li><a href="#">Регистрация</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+          <ul class="header-top-navigation">
+            <li><a>Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     
